--- a/package.json
+++ b/package.json
@@ -76,6 +76,11 @@
     },
     "commands": [
       {
+        "command": "pr.create",
+        "title": "Create Pull Request",
+        "category": "GitHub Pull Requests"
+      },
+      {
         "command": "pr.pick",
         "title": "Checkout Pull Request",
         "category": "GitHub Pull Requests"
@@ -171,6 +176,10 @@
         {
           "command": "pr.close",
           "when": "config.git.enabled && github:inReviewMode"
+        },
+        {
+          "command": "pr.create",
+          "when": "config.git.enabled && !github.inReviewMode"
         },
         {
           "command": "pr.merge",
